--- a/insta_reel_clone/src/App.css
+++ b/insta_reel_clone/src/App.css
@@ -1,3 +1,45 @@
-.app__logo {
-  height: 12vh;
+html {
+  scroll-snap-type: y mandatory;
 }
+
+.app {
+  display: grid;
+  place-items: center;
+  height: 100vh;
+  background-color: black;
+}
+
+
+
+.app__top > h1 {
+  margin: 0;
+  text-align: center;
+  color: white;
+}
+
+.app__logo {
+  height: 10vh;
+}
+
+.app__videos {
+  position: relative;
+  height: 70vh;
+  background-color: white;
+  width: 70%;
+  border-radius: 20px;
+  max-width: 450px;
+  max-height: 1600px;
+  overflow: scroll;
+  scroll-snap-type: y mandatory;
+}
+
+/* Hide scrollbar for Chrome, Safari and Opera */
+.app__videos::-webkit-scrollbar {
+  display: none;
+}
+
+/* Hide scrollbar for IE, Edge and Firefox */
+.app__videos {
+  -ms-overflow-style:none; /*IE and Edge */
+  scrollbar-width: none; /* Firebox */ 
+} 
